// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataFilters renders 1`] = `
.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 0px;
  border-radius: 8px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 6px;
}

.c23 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  flex-wrap: wrap;
  column-gap: 12px;
  row-gap: 12px;
}

.c13 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c24 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c24:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c24:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c24:focus >circle,
.c24:focus >ellipse,
.c24:focus >line,
.c24:focus >path,
.c24:focus >polygon,
.c24:focus >polyline,
.c24:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c24:focus ::-moz-focus-inner {
  border: 0;
}

.c24:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c24:focus:not(:focus-visible) >circle,
.c24:focus:not(:focus-visible) >ellipse,
.c24:focus:not(:focus-visible) >line,
.c24:focus:not(:focus-visible) >path,
.c24:focus:not(:focus-visible) >polygon,
.c24:focus:not(:focus-visible) >polyline,
.c24:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c24:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  max-width: 100%;
}

.c17 {
  display: flex;
  flex-direction: row;
  align-items: start;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding: 0px;
  cursor: pointer;
  font-weight: 400;
  width: auto;
  border: 1px solid rgba(0, 0, 0, 0);
}

.c17 input:checked+span[class*=CheckBoxToggle]>span[class*=CheckBoxKnob] {
  left: 25px;
}

.c20 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c20:checked+span>span {
  left: calc( 48px - 24px );
  background: #ffffff;
}

.c22 {
  background: rgba(0, 0, 0, 0);
  border-color: rgba(0, 0, 0, 0.36);
}

.c22:hover {
  background: rgba(0, 0, 0, 0.04);
}

.c19 {
  flex-shrink: 0;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  padding-left: 42px;
}

.c7:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7::-webkit-input-placeholder {
  color: #676767;
}

.c7::-moz-placeholder {
  color: #676767;
}

.c7:-ms-input-placeholder {
  color: #676767;
}

.c7 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c7:-moz-placeholder,
.c7::-moz-placeholder {
  opacity: 1;
}

.c7::-webkit-input-placeholder {
  font-weight: 400;
}

.c7::-moz-placeholder {
  font-weight: 400;
}

.c7:-ms-input-placeholder {
  font-weight: 400;
}

.c4 {
  position: relative;
  width: 100%;
}

.c4 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c5 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 13px;
}

.c12 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c12 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c12 [class*="ContentBox"] [role="group"],
.c12 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c12 [class*="ContentBox"] [role="group"] label,
.c12 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c12 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c12 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

.c15 {
  border-color: transparent;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c11 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    row-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c21 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c23 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    column-gap: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <svg
              aria-label="Search"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            aria-label="Search"
            autocomplete="off"
            class="c7"
            id="data--search"
            name="_search"
            type="search"
            value=""
          />
        </div>
      </div>
      <form
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <div
              class="c1"
            >
              <div
                class="c11 c12"
              >
                <label
                  class="c13"
                  for="data-name"
                  id="grommet-data-name__label"
                >
                  name
                </label>
                <div
                  class="c14 c15"
                >
                  <div
                    aria-labelledby="grommet-data-name__label"
                    class="c16 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="data-name"
                    role="group"
                  >
                    <label
                      class="c17"
                    >
                      <div
                        class="c18 c19"
                      >
                        <input
                          class="c20"
                          type="checkbox"
                        />
                        <div
                          class="c21 c22"
                        />
                      </div>
                      <span>
                        a
                      </span>
                    </label>
                    <label
                      class="c17"
                    >
                      <div
                        class="c18 c19"
                      >
                        <input
                          class="c20"
                          type="checkbox"
                        />
                        <div
                          class="c21 c22"
                        />
                      </div>
                      <span>
                        b
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="c23"
          >
            <button
              class="c24"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`DataFilters renders outside grommet wrapper 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  column-gap: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c18 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c11 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c20 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c20:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c20:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c20:focus >circle,
.c20:focus >ellipse,
.c20:focus >line,
.c20:focus >path,
.c20:focus >polygon,
.c20:focus >polyline,
.c20:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c20:focus ::-moz-focus-inner {
  border: 0;
}

.c20:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c20:focus:not(:focus-visible) >circle,
.c20:focus:not(:focus-visible) >ellipse,
.c20:focus:not(:focus-visible) >line,
.c20:focus:not(:focus-visible) >path,
.c20:focus:not(:focus-visible) >polygon,
.c20:focus:not(:focus-visible) >polyline,
.c20:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c20:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c7 {
  max-width: 100%;
}

.c13 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c13:hover input:not([disabled])+div,
.c13:hover input:not([disabled])+span {
  border-color: #000000;
}

.c16 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c16:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c15 {
  flex-shrink: 0;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c6::-moz-placeholder {
  color: #AAAAAA;
}

.c6:-ms-input-placeholder {
  color: #AAAAAA;
}

.c6 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c6::-moz-focus-inner {
  border: none;
  outline: none;
}

.c6:-moz-placeholder,
.c6::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

.c4 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    column-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    height: 6px;
  }
}

<div
  class="c0"
  id="data"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Search"
            class="c5"
            viewBox="0 0 24 24"
          >
            <path
              d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
        <input
          aria-label="Search"
          autocomplete="off"
          class="c6"
          id="data--search"
          name="_search"
          type="search"
          value=""
        />
      </div>
    </div>
    <form
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c0"
          >
            <div
              class="c10 "
            >
              <label
                class="c11"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c12 "
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c2 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c13"
                  >
                    <div
                      class="c14 c15"
                    >
                      <input
                        class="c16"
                        type="checkbox"
                      />
                      <div
                        class="c17 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c18"
                  />
                  <label
                    class="c13"
                  >
                    <div
                      class="c14 c15"
                    >
                      <input
                        class="c16"
                        type="checkbox"
                      />
                      <div
                        class="c17 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c19"
        >
          <button
            class="c20"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;
